More card deck fixes... I'm really too much of a perfectionist here.

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@400;700&display=swap');
 
 :root {
-    --display: 'Oleo Script Swash Caps', cursive;
+    --display: 'Oleo Script Swash Caps', serif;
     --body: 'Georgia', serif;
 }
 
